apps/overlays/rg/rg-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rg 
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
