apps/overlays/rg/rg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rg
  namespace: rg
  labels:
    app: rg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rg
  template:
    metadata:
      labels:
        app: rg
    spec:
      containers:
      - name: rg
        image: localhost/racing-game:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
