apps/overlays/rg/rg-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rg
  namespace: rg
spec:
  selector:
    app: rg
  ports:
  - port: 8080
    targetPort: 8080
