apps/overlays/rg/rg-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rg
  namespace: rg
spec:
  to:
    kind: Service
    name: rg
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
